--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -33,6 +33,10 @@
             text-transform: capitalize;
             color: $color-white-text;
             text-decoration: none;
+            transition: all .3s ease-in-out;
+            &:hover{
+                color: $color-orange;
+            }
         }
     }
 }
@@ -42,6 +46,10 @@
     &__link {
         color: $color-white-text;
         text-decoration: none;
+        transition: all .3s ease-in-out;
+        &:hover{
+            color: $color-orange;
+        }
     }
 }
 .header-content {
@@ -127,9 +135,31 @@
         }
     }
 }
-//info end
+//gallery start
+.gallery{
+    padding-top: 8rem;
+    padding-bottom: 6rem;
+    &__title {
+        margin: 0 0 5rem 0;
+        font-family: $Montserrat-Bold;
+        font-size: 3rem;
+        line-height: 3.7rem;
+        text-align: center;
+        letter-spacing: 0.095em;
+    }
+    &__subtitle {
+        font-family: $Montserrat-Medium;
+        font-size: 1.6rem;
+        line-height: 2rem;
+        display: block;
+        letter-spacing: 0;
+    }
+    
+}
+//gallery end
 // characteristics start
 .characteristics {
+    padding: 10rem 0;
     &__title {
         margin: 0 0 5rem 0;
         font-family: $Montserrat-Bold;
@@ -164,7 +194,8 @@
 //characteristics end
 /*reviews start */
 .reviews {
-    padding-bottom: 25rem;
+    padding-top: 3.6rem;
+    padding-bottom: 25.1rem;
     &__title {
         margin: 0 0 5rem 0;
         font-family: $Montserrat-Bold;
@@ -180,45 +211,70 @@
         display: block;
         letter-spacing: 0;
     }
-    &__count-slides{
-        position: absolute;
-    }
 }
-.reviews-slider{
-    &__item{
-        &-inner{
-            display: flex;
-            justify-content: space-between;
-        }
-        &-img{
-            max-width: 65rem;
-            width: 100%;
-        }
+.reviews-inner {
+    display: flex;
+    justify-content: space-between;
+}
+.reviews-slider-img {
+    max-width: 65rem;
+    width: 100%;
+}
+.reviews-slider {
+    margin-left: 2rem;
+    max-width: 34.2rem;
+    width: 100%;
+    height: 100%;
+    &-wrapper {
+        position: relative;
     }
-    &__info{
-        max-width: 34.2rem;
-        width: 100%;
-        margin-left: 2rem;
-        &-name{
+    &__info {
+        &-name {
             font-family: $Montserrat-Bold;
             font-size: 1.8rem;
             line-height: 130.9%;
             letter-spacing: 0.005em;
         }
-        &-location{
-
-        }
-        &-text{
+        &-text {
             line-height: 2.1rem;
         }
     }
+    .slick-arrow {
+        @include button-reset;
+        font-family: $Montserrat-Medium;
+        color: $color-white-text;
+        line-height: 2rem;
+        position: absolute;
+        z-index: 50;
+        transition: all .3s ease-in-out;
+        &:hover{
+            color: $color-orange;
+        }
+    }
+    .slick-prev {
+        bottom: 0;
+    }
+    .slick-next {
+        bottom: 2.5rem;
+    }
+}
+.reviews__count-slides {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+.reviews__current-slide {
+    font-size: 1.8rem;
+    line-height: 2.2rem;
+    font-family: $Montserrat-Bold; 
 }
 /*reviews end */
 //rent start
 .rent {
     min-height: 51.2rem;
-    padding-top: 7.5rem;
-    padding-bottom: 8.5rem;
+    padding: 8rem 0;
     &__title {
         margin: 0 0 5rem 0;
         font-family: $Montserrat-Bold;
@@ -266,8 +322,7 @@
 // rent end
 /*reservation start */
 .reservation {
-    padding-top: 15rem;
-    padding-bottom: 15rem;
+    padding: 15rem 0;
     &__title {
         margin: 0;
         font-family: $Montserrat-Bold;
@@ -347,10 +402,16 @@
             font-size: 1.2rem;
             line-height: 1.5rem;
             letter-spacing: 0.015em;
+            transition: all .3s ease-in-out;
+            &:hover{
+                color: $color-orange;
+            }
         }
     }
 }
 /*reservation end */
+/* map start */
+/* map end */
 // footer start
 .footer {
     padding: 10rem 0rem;
@@ -369,6 +430,10 @@
     margin-top: 3rem;
     color: $color-white-text;
     text-decoration: none;
+    transition: all .3s ease-in-out;
+    &:hover{
+        color: $color-orange;
+    }
 }
 .footer-navigation {
     &__list {
@@ -382,6 +447,10 @@
             line-height: 2rem;
             color: $color-white-text;
             text-decoration: none;
+            transition: all .3s ease-in-out;
+            &:hover{
+                color: $color-orange;
+            }
         }
     }
 }
@@ -399,6 +468,11 @@
         line-height: 2.2rem;
         border-radius: 0.3rem;
         border: 1px solid $color-white-text;
+        transition: all .3s ease-in-out;
+        &:hover{
+            color: $color-orange;
+            border: 1px solid $color-orange;
+        }
     }
 }
 .footer__phone-link {
@@ -410,5 +484,9 @@
     letter-spacing: 0.025em;
     color: $color-white-text;
     text-decoration: none;
+    transition: all .3s ease-in-out;
+    &:hover{
+        color: $color-orange;
+    }
 }
 // footer end
