finish section gallery and finish desktop version, fix bags

--- a/docs/scss/_vars.scss
+++ b/docs/scss/_vars.scss
@@ -1,6 +1,6 @@
-$color-black: #000000;
+$color-black: #000;
 $color-bg: #050505;
-$color-white: #ffffff;
+$color-white: #fff;
 $color-white-text: #FDFDFD;
 $color-orange: #D85706;
 $color-placeholder-text: rgba(253, 253, 253, 0.6);
