--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -8,13 +8,13 @@
 
 .header {
   min-height: 72.3rem;
-}
 
-.header-top {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 4rem;
-  min-height: 4.4rem;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 4rem;
+    min-height: 4.4rem;
+  }
 }
 
 .header-navigation {
@@ -181,7 +181,23 @@
     line-height: 2rem;
     letter-spacing: 0;
   }
+
+  &__items {
+    display: grid;
+    grid-template-columns: 2fr 2fr 1fr 1fr; 
+  }
 }
+
+.gallery-item {
+  display: flex;
+  flex-direction: column;
+
+  &__img {
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 //gallery end
 
 // characteristics start
