--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -495,6 +495,17 @@
 }
 /*reservation end */
 /* map start */
+.map  {
+  height: 69.1rem;
+
+  @include breakpoint($tablet-width) {
+    height: 48.1rem;
+  }
+
+  @include breakpoint($mobile-width) {
+    height: 40rem;
+  }
+}
 /* map end */
 // footer start
 .footer {
