--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -204,6 +204,10 @@
 .characteristics {
   padding: 10rem 0;
 
+  @include breakpoint($tablet-width) {
+    padding: 7rem 0;
+  }
+
   &__title {
     margin: 0 0 5rem 0;
     font-family: $Montserrat-Bold;
@@ -222,18 +226,21 @@
   }
 
   &__inner {
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+
+    @include breakpoint($mobile-width) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__img {
-    margin-left: auto;
+    width: 100%;
   }
 }
 
 .characteristics-table {
-  max-width: 45rem;
-  width: 100%;
 
   &__column {
     letter-spacing: 0.015em;
